prusti-tests/tests/verify/ui/predicates/dont-call.stderr
error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
  --> $DIR/dont-call.rs:11:14
   |
11 |     let _x = pred_id(true);
   |              ^^^^^^^
   |
note: this is a specification-only predicate function
  --> $DIR/dont-call.rs:6:1
   |
6  | / fn pred_id(x: bool) -> bool {
7  | |     x
8  | | }
   | |_^

error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
  --> $DIR/dont-call.rs:29:29
   |
29 |                 illegal_ref(Self::inner_pred)
   |                             ^^^^^^^^^^^^^^^^
   |
note: this is a specification-only predicate function
  --> $DIR/dont-call.rs:24:13
   |
24 | /             fn inner_pred(b: bool) -> bool {
25 | |                 b
26 | |             }
   | |_____________^

error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
  --> $DIR/dont-call.rs:37:17
   |
37 |     illegal_ref(pred_id);
   |                 ^^^^^^^
   |
note: this is a specification-only predicate function
  --> $DIR/dont-call.rs:6:1
   |
6  | / fn pred_id(x: bool) -> bool {
7  | |     x
8  | | }
   | |_^

error: aborting due to 3 previous errors

